# antihero

./: LICENSE  README.md  pyproject.toml
examples/: basic_policy.py  lerobot_safety.py  ros2_warehouse.py
rep/: README.md  rep-xxxx.rst
rep/examples/: cobot-policy.yaml  healthcare-policy.yaml  warehouse-policy.yaml
src/antihero/: __init__.py  exceptions.py  guard.py  notifications.py  threats.py  wrap.py
src/antihero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/antihero/_internal/: hashing.py  time.py
src/antihero/adapters/: __init__.py  anthropic.py  autogen.py  base.py  crewai.py  generic.py  langchain.py  lerobot.py  openai.py  ros.py
src/antihero/envelopes/: __init__.py  aee.py  apg.py  pde.py  tce.py
src/antihero/evidence/: __init__.py  canonical.py  chain.py  signing.py  store.py
src/antihero/policy/: __init__.py  engine.py  loader.py  matchers.py  requirements.py  schema.py
src/antihero/realtime/: __init__.py  artifact.py  bdd.py  bytecode.py  compiler.py  evaluator.py  guard.py  subject.py  trie.py
src/antihero/risk/: budget.py
src/antihero/simulation/: __init__.py  scenarios.py
src/antihero/simulation/digital_twin/: __init__.py  config.py  isaac_backend.py  mujoco_backend.py  result.py  validator.py
src/antihero/simulation/suites/: __init__.py  iso_13482.py
tests/: test_adapter_lerobot.py  test_adapter_ros.py  test_digital_twin_result.py  test_digital_twin_validator.py  test_iso_13482_suite.py  test_realtime_bdd.py  test_realtime_bytecode.py  test_realtime_compiler.py  test_realtime_evaluator.py  test_realtime_performance.py  test_realtime_trie.py
