[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antihero"
version = "0.3.0"
description = "Behavioral safety engine for humanoid robots — policy enforcement, digital twin validation, and cryptographic audit trails"
requires-python = ">=3.11"
authors = [{ name = "Productstein", email = "chris@mclemore.xyz" }]
license = {text = "Apache-2.0"}
keywords = ["robotics", "safety", "humanoid", "policy-engine", "ros2", "mujoco", "iso-13482", "digital-twin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pynacl>=1.5",
]

[project.optional-dependencies]
robotics = ["mujoco>=3.0"]
cli = ["typer>=0.9", "rich>=13.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://antihero.systems"
Documentation = "https://antihero.systems/docs"
Repository = "https://github.com/productstein/antihero"
Issues = "https://github.com/productstein/antihero/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
